# dagster_etl_with_rest_api

./: app.py  readme.md
rest_api_postgres/: README.md  pyproject.toml  setup.cfg  setup.py
rest_api_postgres/.dlt/: config.toml  secrets.toml
rest_api_postgres/rest_api_postgres/: assets.py  definitions.py
rest_api_postgres/rest_api_postgres.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: add_orders.html  home.html
