[project]
name = "rest_api_postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "rest_api_postgres.definitions"
code_location_name = "rest_api_postgres"

[tool.setuptools.packages.find]
exclude=["rest_api_postgres_tests"]
